--- a/pom.xml
+++ b/pom.xml
@@ -300,7 +300,11 @@
       <artifactId>spring-web</artifactId>
       <version>3.0.5.RELEASE</version>
     </dependency>
-
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+    </dependency>
 
   </dependencies>
   <build>
